# ML2

./: .gitignore  README.md  pyproject.toml
.cursor/plans/: lab-1_refactoring_326632c5.plan.md  xai_lab1_wine_quality_51a69c79.plan.md  план_lab_ii_ffd10345.plan.md
LAB_I/docs/context/: common_context.md  lab_1_memory.md  task.md  tech_doc.md
LAB_I/docs/raw/: part_1_sklearn.ipynb  part_2_CAT_x_XGB.ipynb  part_3_bonus.ipynb
LAB_I/notebooks/: lab_1.ipynb
LAB_I/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
LAB_I/notebooks/catboost_info/learn/: events.out.tfevents
LAB_I/notebooks/catboost_info/test/: events.out.tfevents
LAB_II/docs/: assignment.md  recommendations_val_acc_097.md  recommendations_val_acc_097_after_exp7.md
LAB_II/notebooks/: lab_2.ipynb  solution.ipynb
LAB_III/docs/: lab_3_results.md  req.md
LAB_III/solution/: fill_external_unknown_images.py
LAB_III/solution/iterations/: current_iteration_2026-04-25V2.md  data_layer_training_changes.md  model_results_iteration_2026-04-26V6.md
LAB_III/solution/iterations/approved_results/: final_result.md
LAB_IV/archive/: lab-4_refactor.ipynb
LAB_IV/data/: lab-4-run-guide.md  task_file.md
LAB_IV/solution/: lab-4.ipynb  lab-4_refactor.ipynb
LAB_V/: lab5_iteration_state.md
LAB_V/data/: lab5_results_analysis_notes.md  task_file.md
LAB_V/solution/: lab-5.ipynb
docs/: conclusion_style_guide.md
